metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/Product_Configuration__c.object-meta.xml
<CustomObject>
    <label>Product Configuration</label>
    <nameField>
        <label>Product Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>