metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/Additional_Notification_Party__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notification_Party__c</fullName>
    <label>Additional Notification Party</label>
    <type>Email</type>
</CustomField>