metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/BU_Manager__c.field-meta.xml
<CustomField>
    <fullName>BU_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manager of the BU team that processes the renewals for the product family</description>
    <inlineHelpText>Manager of the BU team that processes the renewals for the product family. If Opportunity is Handled by BU, this user will be the approving VP.</inlineHelpText>
    <label>BU Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Configurations_BUManager</relationshipName>
    <type>Lookup</type>
</CustomField>