metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/BU_Notification_Party__c.field-meta.xml
<CustomField>
    <fullName>BU_Notification_Party__c</fullName>
    <description>BU users to notify on the close of opportunities. Added this field in the scope of the ticket: https://ws-lambda.atlassian.net/browse/LAMBDA-24789</description>
    <inlineHelpText>Email group of BU owners to notify of closed opportunities.</inlineHelpText>
    <label>BU Notification Party</label>
    <type>Email</type>
</CustomField>