metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/Contacting_Entity_JP__c.field-meta.xml
<CustomField>
    <fullName>Contacting_Entity_JP__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Japan</description>
    <inlineHelpText>Japan</inlineHelpText>
    <label>Contacting Entity JP</label>
    <referenceTo>Subsidiary__c</referenceTo>
    <relationshipLabel>Product Configurations (Contacting Entity JP)</relationshipLabel>
    <relationshipName>JapaneseEntities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>