metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/Contracting_Entity_DE_and_AT__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Entity_DE_and_AT__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Germany and Austria</description>
    <inlineHelpText>Germany and Austria</inlineHelpText>
    <label>Contracting Entity DE and AT</label>
    <referenceTo>Subsidiary__c</referenceTo>
    <relationshipLabel>Product Configurations (Contracting Entity DE and AT</relationshipLabel>
    <relationshipName>GermanAndAustrianEntities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>