metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/Contracting_Entity_Other__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Entity_Other__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>All other locales</description>
    <inlineHelpText>All other locales</inlineHelpText>
    <label>Contracting Entity Other</label>
    <referenceTo>Subsidiary__c</referenceTo>
    <relationshipLabel>Product Configurations (Contracting Entity Other)</relationshipLabel>
    <relationshipName>OtherEntities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>