metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/Contracting_Entity_US_and_AE__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Entity_US_and_AE__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>USA and United Arab Emirates</description>
    <inlineHelpText>USA and United Arab Emirates</inlineHelpText>
    <label>Contracting Entity US and AE</label>
    <referenceTo>Subsidiary__c</referenceTo>
    <relationshipLabel>Product Configurations</relationshipLabel>
    <relationshipName>USandUAEEntities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>