metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <description>Formula Equals to “New Business Enabled” OR “Renewal Enabled”. Will be used to control automation for the product.</description>
    <formula>if ( OR(Renewal_Enabled__c, New_Business_Enabled__c), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field. TRUE when at least one of New Business Enabled or Renewal Enabled is TRUE.</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>