metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/Exclude_from_30_Day_Auto_Closure__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_30_Day_Auto_Closure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LAMBDA-56448 Upsell /New business opportunities without any activities are auto-closed after 30 days. This checkbox is set to mark Product configurations to exclude from Auto closure</description>
    <inlineHelpText>Mark this checkbox to prevent auto closure of New Business Upsell Opportunities</inlineHelpText>
    <label>Exclude from 30 Day Auto Closure</label>
    <type>Checkbox</type>
</CustomField>