metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/Fulfillment_Email__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Email__c</fullName>
    <label>Fulfillment Email</label>
    <type>Email</type>
</CustomField>