metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/Intro_Survey__c.field-meta.xml
<CustomField>
    <fullName>Intro_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LAMBDA-65516 Field to capture link to the welcome survey record</description>
    <inlineHelpText>Related welcome Survey to be sent in intro email</inlineHelpText>
    <label>Intro Survey</label>
    <referenceTo>Survey</referenceTo>
    <relationshipLabel>Product Configurations</relationshipLabel>
    <relationshipName>Product_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>