metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/Mailbox_Override__c.field-meta.xml
<CustomField>
    <fullName>Mailbox_Override__c</fullName>
    <description>Email domain to use for Outreach sequences, system emails to customers sent via Salesforce, and for PostGrid to send AR warning letters to customers. NetSuite adds a CC recipient automatically for all agreements of renewal Quotes (CC to &quot;renewals@OutboundEmailDomain&quot;). This value can ONLY be changed from NetSuite and it&apos;s automatically synchronized here!</description>
    <inlineHelpText>Email domain to use for Outreach sequences, system emails to customers sent via Salesforce, and for PostGrid to send AR warning letters to customers. NetSuite adds a CC recipient automatically for all agreements of renewal Quotes (CC to &quot;renewals@OutboundEmailDomain&quot;). This value can ONLY be changed from NetSuite and it&apos;s automatically synchronized here!</inlineHelpText>
    <label>Outbound Email Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>