metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/Manual_Quote__c.field-meta.xml
<CustomField>
    <fullName>Manual_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual O2C</label>
    <type>Checkbox</type>
</CustomField>