metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/Manual_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Manual_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Subscription</label>
    <type>Checkbox</type>
</CustomField>