metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/NetSuite_Class__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Class__c</fullName>
    <description>NetSuite class associated with the product</description>
    <inlineHelpText>NetSuite class associated with the product</inlineHelpText>
    <label>NetSuite Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>