metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/NetSuite_Product__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to TRUE if this product is handled via NetSuite as the Billing System.</description>
    <inlineHelpText>Set to TRUE if this product is handled via NetSuite as the Billing System.</inlineHelpText>
    <label>NetSuite Product</label>
    <type>Checkbox</type>
</CustomField>