metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/New_Business_Enabled__c.field-meta.xml
<CustomField>
    <fullName>New_Business_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specify if the New Business service is running for the product family (certain automation processes disabled when false)</description>
    <inlineHelpText>Specify if the New Business service is running for the product family (certain automation processes disabled when false)</inlineHelpText>
    <label>New Business Enabled</label>
    <type>Checkbox</type>
</CustomField>