metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/New_Business_Manager__c.field-meta.xml
<CustomField>
    <fullName>New_Business_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manager of the sales team that processes the new customer acquisitions for the product family</description>
    <inlineHelpText>Manager of the sales team that processes the new customer acquisitions for the product family</inlineHelpText>
    <label>New Business Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Configurations_NewBusinessMgr</relationshipName>
    <type>Lookup</type>
</CustomField>