metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/New_Business_Notification_Party__c.field-meta.xml
<CustomField>
    <fullName>New_Business_Notification_Party__c</fullName>
    <description>Email of the BU person who will be notified when a new Lead or Opportunity created for this product.</description>
    <inlineHelpText>Email of the BU person who will be notified when a new Lead or Opportunity created for this product.</inlineHelpText>
    <label>New Business Notification Party</label>
    <type>Email</type>
</CustomField>