metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/Non_US_Service_Provider_City__c.field-meta.xml
<CustomField>
    <fullName>Non_US_Service_Provider_City__c</fullName>
    <label>Non-US Service Provider City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>