metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/Non_US_Service_Provider_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Non_US_Service_Provider_Postal_Code__c</fullName>
    <label>Non-US Service Provider Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>