metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/Non_US_Service_Provider_Street__c.field-meta.xml
<CustomField>
    <fullName>Non_US_Service_Provider_Street__c</fullName>
    <label>Non-US Service Provider Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>