metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/Processed_via_OTC__c.field-meta.xml
<CustomField>
    <fullName>Processed_via_OTC__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Set to TRUE if closed deals should be finalized via the OTC team (e.g. invoice processing). OTC-related tasks are automatically generated for the product when the value is TRUE.</description>
    <inlineHelpText>Set to TRUE if closed deals should be finalized via the OTC team (e.g. invoice processing). OTC-related tasks are automatically generated for the product when the value is TRUE.</inlineHelpText>
    <label>Processed via O2C</label>
    <type>Checkbox</type>
</CustomField>