metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/Product_Family_Logo__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_Logo__c</fullName>
    <description>Link to the logo file.  To edit: 1) switch to Classic; 2) navigate to Documents tab, 3) Product Logos folder</description>
    <label>Product Family Logo</label>
    <type>Url</type>
</CustomField>