metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/Quote_Signer__c.field-meta.xml
<CustomField>
    <fullName>Quote_Signer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LAMBDA-60988: This field is added on the Quote to store the user who would counter sign the Quote PDF/Contract</description>
    <inlineHelpText>Counter Signer for the Adobe Contract</inlineHelpText>
    <label>Quote Signer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>