metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/Renewal_Cycle_Days__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Cycle_Days__c</fullName>
    <description>LAMBDA-57256 :  Start the renewal process 180 days before the renewal date instead of 120. It is set to 180 on on all except Kayako and EngineYard. Kayako and EngineYard is set to 120.</description>
    <inlineHelpText>Days of Renewal Cycle.120 for Kayako and EngineYard. Other Products - 180</inlineHelpText>
    <label>Renewal Cycle Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>