metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/Renewal_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specify if the renewal service is running for the product family (disable certain automation processes when false)</description>
    <inlineHelpText>Specify if the renewal service is running for the product family (disable certain automation processes when false)</inlineHelpText>
    <label>Renewal Enabled</label>
    <type>Checkbox</type>
</CustomField>