metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/Renewal_Manager__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manager of the sales team that processes the renewals for the product family</description>
    <inlineHelpText>Manager of the sales team that processes the renewals for the product family</inlineHelpText>
    <label>Renewal Manager</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Manager Renewals</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Manager CSM</value>
        </filterItems>
        <infoMessage>Choose the manager</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Configurations_RenewalManager</relationshipName>
    <type>Lookup</type>
</CustomField>