metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/Self_Serve__c.field-meta.xml
<CustomField>
    <fullName>Self_Serve__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox field is checked for the products which are enabled for Self-Serve portal</description>
    <inlineHelpText>Select this checkbox to enable the product for Self-Serve portal</inlineHelpText>
    <label>Self Serve</label>
    <type>Checkbox</type>
</CustomField>