metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/Service_Provider_Signature__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Signature__c</fullName>
    <description>Stores the Signature of Quote Signer which will be prefilled to Service Provider Signature on Quotes</description>
    <inlineHelpText>Stores the Signature of Quote Signer which will be prefilled to Service Provider Signature on Quotes</inlineHelpText>
    <label>Service Provider Signature</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>