metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/Uptick_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Uptick_Multiplier__c</fullName>
    <description>LAMBDA-47465 field to specify product multiplier for a field. The field is used to validate that renewal opportunity ARR is greater than the Current ARR * multiplier</description>
    <inlineHelpText>When greater than 1.0, the quote ARR must be greater or equal to the current ARR times the multiplier.</inlineHelpText>
    <label>Uptick Multiplier</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>