metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/fields/US_Service_Provider_State__c.field-meta.xml
<CustomField>
    <fullName>US_Service_Provider_State__c</fullName>
    <label>US Service Provider State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>