metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/validationRules/NetSuite_Class_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>NetSuite_Class_Required</fullName>
    <active>true</active>
    <description>Ensures that when the NetSuite Product field is checked, the NetSuite Class field cannot be left blank.</description>
    <errorConditionFormula>AND(
   NetSuite_Product__c = TRUE,
   ISBLANK(NetSuite_Class__c)
)</errorConditionFormula>
    <errorMessage>NetSuite Class is required when NetSuite Product is checked.</errorMessage>
</ValidationRule>