metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/validationRules/ValidateNetsuiteClass.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateNetsuiteClass</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(NetSuite_Class__c , &quot;:&quot;)</errorConditionFormula>
    <errorDisplayField>NetSuite_Class__c</errorDisplayField>
    <errorMessage>NetSuite Class is incorrect. It should be the name part only (i.e., without &apos;:&apos; symbol)</errorMessage>
</ValidationRule>