metadata/sf-prod/force-app/main/default/objects/Product_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>NetSuite_Product__c</columns>
    <columns>NetSuite_Class__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Renewal_Manager__c</columns>
    <columns>BU_Manager__c</columns>
    <columns>New_Business_Manager__c</columns>
    <columns>BU_Notification_Party__c</columns>
    <columns>Fulfillment_Email__c</columns>
    <columns>Renewal_Enabled__c</columns>
    <columns>New_Business_Enabled__c</columns>
    <columns>Processed_via_OTC__c</columns>
    <columns>Manual_Quote__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>